bugfix/HED-2006 offset text layout issues

--- a/src/component-library/careers/StatsCards/StatsCards.module.scss
+++ b/src/component-library/careers/StatsCards/StatsCards.module.scss
@@ -104,8 +104,7 @@
       width: 100%;
       max-width: px-to-rem(357);
       aspect-ratio: 357/184;
-      align-self: start;
-      justify-self: end;
+      place-self: start end;
     }
   }
 }
